--- a/Extensions.DateTime/Extensions.DateTime.csproj
+++ b/Extensions.DateTime/Extensions.DateTime.csproj
@@ -9,6 +9,10 @@
     <Product />
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard1.0\Extensions.DateTime.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Include="..\GlobalSuppressions.cs" Link="GlobalSuppressions.cs" />
   </ItemGroup>
