--- a/test/Extensions.String.Tests/Extensions.String.Tests.csproj
+++ b/test/Extensions.String.Tests/Extensions.String.Tests.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConversionTests.cs" />
+    <Compile Include="CountingTests.cs" />
     <Compile Include="ManipulationTests.cs" />
     <Compile Include="PatternMatchTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
