--- a/Extensions.Type/Extensions.Type.csproj
+++ b/Extensions.Type/Extensions.Type.csproj
@@ -21,4 +21,8 @@
     <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+  </ItemGroup>
+
 </Project>
